# CMake-Tutorial

./: .gitignore  CMake Tutor.pptx
amdc-teensy-proj/: CMakeLists.txt
amdc-teensy-proj/cmake/toolchains/: teensy41.toolchain.cmake
amdc-teensy-proj/cmake/toolchains/teensy_cmake_macros/: teensy_cmake_macrosConfig.cmake  teensy_cmake_macrosConfigVersion.cmake
amdc-teensy-proj/examples/: CMakeLists.txt
amdc-teensy-proj/examples/test1/: CMakeLists.txt  main.cpp
proj1/: CMakeLists.txt
